start doing DataProcessing class

--- a/Program1/CMakeLists.txt
+++ b/Program1/CMakeLists.txt
@@ -6,4 +6,5 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
 add_executable(Program1 src/main.cpp
         src/SharedBuffer/SharedBuffer.cpp src/SharedBuffer/SharedBuffer.h
-        src/DataProcessor/DataProcessor.cpp src/DataProcessor/DataProcessor.h)
+        src/DataProcessor/DataProcessor.cpp src/DataProcessor/DataProcessor.h
+        src/Program1/Program1.cpp src/Program1/Program1.h)
