added a data processing class in the second program

--- a/Program2/CMakeLists.txt
+++ b/Program2/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Program2 src/main.cpp
         src/Program2/Program2.cpp src/Program2/Program2.h
-        src/NetworkConnecter/NetworkConnecter.cpp src/NetworkConnecter/NetworkConnecter.h)
+        src/NetworkConnecter/NetworkConnecter.cpp src/NetworkConnecter/NetworkConnecter.h
+        src/DataProcessor/DataProcessor.cpp src/DataProcessor/DataProcessor.h)
